force-app/main/default/objects/License_Limit__mdt/License_Limit__mdt.object-meta.xml
<CustomObject>
    <description>Contains the license limit for each type of Salesforce licenses.</description>
    <label>License Limit</label>
    <pluralLabel>License Limits</pluralLabel>
</CustomObject>