force-app/main/default/objects/License_Limit__mdt/fields/Agency__c.field-meta.xml
<CustomField>
    <fullName>Agency__c</fullName>
    <label>Agency</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>STA</fullName>
                <default>true</default>
                <label>STA</label>
            </value>
            <value>
                <fullName>TfNSW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>