force-app/main/default/objects/License_Limit__mdt/fields/Available_Force_com__c.field-meta.xml
<CustomField>
    <fullName>Available_Force_com__c</fullName>
    <description>Use trigger to update this fied</description>
    <label>Available Force.com</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>