force-app/main/default/objects/License_Limit__mdt/fields/Max_Force_com__c.field-meta.xml
<CustomField>
    <fullName>Max_Force_com__c</fullName>
    <description>The maximum number of Force.com license.</description>
    <label>Max Force.com</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>