force-app/main/default/objects/License_Limit__mdt/fields/Max_Service_Cloud__c.field-meta.xml
<CustomField>
    <fullName>Max_Service_Cloud__c</fullName>
    <description>Maximum number of Service Cloud licenses.</description>
    <label>Max Service Cloud</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>